WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267709
[WebGPU] shader,validation,parse,attribute,* crashes when run
https://bugs.webkit.org/show_bug.cgi?id=267709
Summary
[WebGPU] shader,validation,parse,attribute,* crashes when run
Mike Wyrzykowski
Reported
2024-01-18 09:54:04 PST
[WebGPU] shader,validation,parse,attribute,* crashes when run
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-18 09:54:33 PST
<
rdar://problem/121200436
>
Mike Wyrzykowski
Comment 2
2024-01-18 10:08:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22922
EWS
Comment 3
2024-01-18 16:52:03 PST
Committed
273202@main
(83fd54401969): <
https://commits.webkit.org/273202@main
> Reviewed commits have been landed. Closing PR #22922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug