[WebGPU] shader,validation,parse,attribute,* crashes when run https://bugs.webkit.org/show_bug.cgi?id=267709 <radar://121200436>

Reviewed by Tadeu Zagallo.

constantValue may be std::nullopt, so check its value
prior to continuing.

The shader,validation,parse,attribute:expressions:value=%22override%22;
pass after this change.

* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
(WGSL::AttributeValidator::parseLocation):

Canonical link: https://commits.webkit.org/273202@main